# climasense

./: .env  .env.example  .gitattributes  .gitignore  ClimaSense.sln  Climate_Time_Series_Analysis.ipynb  README.md  SLICE-10-NOTES.md  SLICE-11-NOTES.md  SLICE-2-NOTES.md  SLICE-4-NOTES.md  SLICE-5-NOTES.md  SLICE-6-NOTES.md  SLICE-7-NOTES.md  docker-compose.yml  openapi.yaml
.build_cells/: build_notebook.py  eda_cells.json  extract_assets.py  forecast_cells.json  sequence_cells.json  tsa_cells.json
.claude/: settings.local.json
.config/: dotnet-tools.json
.github/workflows/: ci.yml
assets/: results.json
contracts/: openapi.yaml
docs/: DEPLOY.md  api.html
docs/adr/: 0001-lag-lr-as-production-forecaster.md  0002-three-detector-anomaly-pipeline.md  0003-calendar-conditioned-profiles.md  0004-replay-mode-with-iclock.md  0005-ashrae-55-graphical-comfort-zone.md  0006-comfort-budget-panel.md  0007-replay-clock-alerts-with-sse.md  0008-explicit-single-zone-scope.md  0009-tight-14-day-build-scope.md  0010-upstream-sql-server-as-source-of-truth.md  0011-cursor-snapshot-and-interface-emergence-policy.md  0012-openapi-contract-first-wire-format.md  0013-bcp-bootstrap-strategy.md  0014-historical-explorer-range-and-heatmap.md
docs/legacy/: CONTEXT.md  README.md
ios/: README.md
ios/specs/: 2026-06-16-climasense-ios-pendant-design.md
scripts/: build-api-html.py  climasense_ro.sql  derive_pattern_thresholds.py  init-db.sql  regen-contracts.sh  sync-sensor-data.sh  ups3-index.sql
src/ClimaSense.ML/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/ClimaSense.ML/climasense_ml/: __init__.py  anomaly_changepoint.py  anomaly_orchestrator.py  anomaly_persistence.py  anomaly_residual.py  anomaly_router.py  anomaly_sensor_failure.py  clock.py  comfort.py  comfort_emitter.py  comfort_persistence.py  comfort_router.py  contract_validator.py  cursor.py  db.py  forecast_emitter.py  forecast_persistence.py  forecast_router.py  forecaster.py  ingestion.py  leaderboard.py  logging_setup.py  main.py  profile_computer.py  profile_emitter.py  profile_persistence.py  profile_router.py  stubs.py
src/ClimaSense.ML/climasense_ml/schemas/: __init__.py  generated.py
src/ClimaSense.ML/tests/: test_anomaly_changepoint.py  test_anomaly_orchestrator.py  test_anomaly_persistence.py  test_anomaly_residual.py  test_anomaly_router.py  test_anomaly_sensor_failure.py  test_bootstrap_state.py  test_breach_gaps_and_islands_synthetic.py  test_changepoint_scan_and_replace_idempotent.py  test_comfort_emitter.py  test_comfort_persistence.py  test_comfort_polygons_seasonal_boundary.py  test_comfort_router.py  test_contract_validator.py  test_cursor_snapshot.py  test_derive_pattern_thresholds.py  test_ingestion.py  test_lag_lr_matches_notebook.py  test_leaderboard_seeder.py  test_openapi_contract_matches_emission.py  test_profile_computer.py  test_profile_emitter.py  test_profile_persistence.py  test_profile_router.py  test_request_id.py  test_stubs_return_501.py
src/ClimaSense.Monitor/: ClimaSense.Monitor.csproj  Program.cs  appsettings.json
src/ClimaSense.Monitor/Domain/: Alert.cs  (+11 more)
src/ClimaSense.Web/: .dockerignore  ClimaSense.Web.csproj  Dockerfile  Program.cs
tests/ClimaSense.Monitor.Tests/: ClimaSense.Monitor.Tests.csproj
tests/ClimaSense.Web.Tests/: AlertEndpointTests.cs  AlertReadServiceTests.cs  AlertRuleReadServiceTests.cs  AlertRuleTests.cs  AlertScanServiceTests.cs  AnomalyEndpointTests.cs  AnomalyReadServiceTests.cs  ClimaSense.Web.Tests.csproj  ComfortBudgetEndpointTests.cs  ComfortBudgetReadServiceTests.cs  ComfortEndpointTests.cs  ComfortReadServiceTests.cs  CursorSnapshotTests.cs  ForecastReadServiceTests.cs  GeneratedClientHygieneTests.cs  GeneratedEnumWireSpellingTests.cs  IMLServiceClientContractTests.cs  LatestForecastEndpointTests.cs  LatestReadingEndpointTests.cs  LeaderboardEndpointTests.cs  LeaderboardReadServiceTests.cs  MLFailureMappingTests.cs  MLProxyEndpointsMapFailureTests.cs  ProfileEndpointTests.cs  ProfileReadServiceTests.cs  RangeBucketParsingTests.cs  RangeEndpointTests.cs  RangeQueryServiceTests.cs  SensorDataServiceTests.cs  ThresholdAlertScannerTests.cs
(+130 files in other folders)
