[project]
name = "climasense-ml"
version = "0.2.0"
description = "ClimaSense ML tier (FastAPI). Slice 2: OpenAPI contract + codegen + stubs."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Arthur Kahwa" }]

dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "python-json-logger>=2.0.7,<3",
    "sqlalchemy>=2.0.36,<3",
    "pyodbc>=5.2,<6",
    "pydantic>=2.9,<3",
    # ContractValidator parses contracts/openapi.yaml at startup.
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    # Codegen for `schemas/generated.py`. Invoked by
    # `scripts/regen-contracts.sh` and by the FastAPI Dockerfile.
    "datamodel-code-generator>=0.26,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["climasense_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
