[project]
name = "climasense-ml"
version = "0.8.0"
description = "ClimaSense ML tier (FastAPI). Slice 8: three-detector anomaly pipeline."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Arthur Kahwa" }]

dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "python-json-logger>=2.0.7,<3",
    "sqlalchemy>=2.0.36,<3",
    "pyodbc>=5.2,<6",
    "pydantic>=2.9,<3",
    # ContractValidator parses contracts/openapi.yaml at startup.
    "PyYAML>=6.0,<7",
    # Slice 3: pandas drives the CSV transform that precedes the bcp
    # bulk load (`IngestionService.bootstrap_from_csv_if_empty`).
    "pandas>=2.2,<4",
    # Slice 5: lag-LR boot-fit + recursive multi-step prediction.
    # scikit-learn pinned to a 1.x band — coefficients are stable
    # across the band so the golden test stays within 1e-6 of the
    # notebook's row in `assets/results.json`.
    "scikit-learn>=1.5,<2",
    "numpy>=1.26,<3",
    # Slice 5: APScheduler drives the β-prime emission gate.
    "apscheduler>=3.10,<4",
    # Slice 8: ruptures provides the PELT changepoint detector used by
    # `ChangepointDetector`. Pinned to the 1.1.x band — the
    # `Pelt(model='rbf')` API surface is stable across the band, and
    # the wheel ships arm64+linux64 binaries so the FastAPI Dockerfile
    # installs without a C-extension build.
    "ruptures>=1.1.9,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    # Codegen for `schemas/generated.py`. Invoked by
    # `scripts/regen-contracts.sh` and by the FastAPI Dockerfile.
    "datamodel-code-generator>=0.26,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["climasense_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
